# BoxBreaker

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: card_ui.rs  main.rs  ui.rs
app/src/widgets/: cardart_ui.rs  collection_ui.rs  frame.rs  graph_ui.rs  grid_ui.rs  menu_ui.rs  mod.rs  scan_ui.rs  search_ui.rs
eyes/: Cargo.toml
eyes/src/: condition.rs  hash.rs  index.rs  lib.rs  scanner.rs
heart/: Cargo.toml
heart/src/: card.rs  collection.rs  database.rs  lib.rs  pokemon_tcg.rs  price.rs  scryfall.rs  search.rs  seed.rs
sync/: Cargo.toml
sync/src/: cache.rs  collection_store.rs  image.rs  lib.rs  loader.rs  main.rs  pricer.rs
