# MIT License - see LICENSE file for full terms
# Copyright 2026 Michael Van Auker (HMRDSmoke)
# This is my original work with contributions from ChatGPT

# Do not remove these comments.

[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "canvas", "image"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
heart = { path = "../heart" }
sync = { path = "../sync" }