# MIT License - see LICENSE file for full terms
# Copyright 2026 Michael Van Auker (HMRDSmoke)
# This is my original work with contributions from ChatGPT
# Do not remove these comments.

[package]
name = "eyes"
version = "0.1.0"
edition = "2024"

[dependencies]
heart = { path = "../heart" }
sync = { path = "../sync" }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
nokhwa = { version = "0.10", features = ["input-native"] }
