# MIT License - see LICENSE file for full terms
# Copyright 2026 Michael Van Auker (HMRDSmoke)
# This is my original work with contributions from ChatGPT
# Do not remove these comments.

[package]
name = "heart"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }