# MIT License - see LICENSE file for full terms
# Copyright 2026 Michael Van Auker (HMRDSmoke)
# This is my original work with contributions from ChatGPT
# Do not remove these comments.

[package]
name = "sync"
version = "0.1.0"
edition = "2024"

[dependencies]
heart = { path = "../heart" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"